@@ -1,3 +1,8 @@
+2003-07-25  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiffsplit.c: increased the maximum number of pages that
+	can be split.  Patch provided by Andrew J. Montalenti.
+
 2003-07-11  Andrey Kiselev  <dron@remotesensing.org>
 
 	* tools/raw2tiff.c: Added option `-p' to explicitly select color
